Update CurieUtilBuilder to overwrite default values with user-supplied values